--- a/scss/style/blocks/mobile-menu.scss
+++ b/scss/style/blocks/mobile-menu.scss
@@ -49,17 +49,20 @@
 }
 
 .mobile-menu__link {
-  @extend .make-font-large;
+  @extend .make-font-medium-semibold;
+
   line-height: 1.3;
 
   display: flex;
   align-items: center;
 
-  padding: 15px 30px;
+  height: 60px;
 
-  color: $color-gray--darker;
-  border-top: 1px solid $color-gray--light;
-  border-bottom: 1px solid $color-gray--light;
+  padding: 0 30px;
+
+  color: $color-light-blue;
+  border-top: 1px solid $color-gray--lighter;
+  border-bottom: 1px solid $color-gray--lighter;
 
   text-decoration: none;
 
@@ -82,9 +85,9 @@
 .mobile-menu__link__parent-icon {
   order: 3;
 
-  height: 24px;
-  width: 24px;
-  min-width: 24px;
+  height: 16px;
+  width: 16px;
+  min-width: 16px;
   margin-left: 20px;
 }
 
@@ -112,21 +115,21 @@
 
   // Level 1
 .mobile-menu--collapsing .mobile-menu__level .mobile-menu__link {
-  background: $color-tbd-9;
+  background: $color-white;
 }
 
 .mobile-menu--collapsing .mobile-menu__level .mobile-menu__link.is-active {
-  background: $color-tbd-10;
+  background: $color-white;
 }
 
   // Level 2
 .mobile-menu--collapsing .mobile-menu__level .mobile-menu__level .mobile-menu__link {
-  padding-left: 35px;
-  background-color: $color-tbd-9;
+  padding-left: (30px + 24px);
+  background-color: $color-white;
 }
 
 .mobile-menu--collapsing .mobile-menu__level .mobile-menu__level .mobile-menu__link.is-active {
-  background-color: $color-tbd-11;
+  background-color: $color-white;
 }
 
   // Level 3
@@ -162,6 +165,7 @@
 }
 
 .mobile-menu--collapsing .mobile-menu__level.is-open {
+  transition: max-height $transition-duration cubic-bezier(0.01, 0, 1, 0), visibility $transition-duration;
   visibility: visible;
 
   // Watch out: work around, since no transition to `height: auto` is possible
@@ -175,9 +179,16 @@
   display: none;
 }
 
+.mobile-menu--collapsing .mobile-menu__link__parent-icon {
+  transition: transform $transition-duration ease;
+  transform: rotate(0);
+}
+
 .mobile-menu--collapsing .mobile-menu__link--parent.is-active {
-  // TODO
-  //.icon--arrow-bottom;
+  .mobile-menu__link__parent-icon {
+    transition: transform $transition-duration ease;
+    transform: rotate(90deg);
+  }
 }
 
 // Copyright AXA Versicherungen AG 2015
